# DeepAgent

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml  run_agent.py
agent_workspace/: datetime_test.py
src/: AGENTS.md  subagents.yaml
src/agent/: __init__.py  env_utils.py  graph.py  my_agent1.py  my_agent2.py  my_agent3.py  my_agent4.py  my_backend.py  my_llm.py  my_tools.py
src/agent/multi_agent/: main_agent.py  mcp_tool_config.py
src/agent/sandbox_demo/: agent_daytona.py  custom_opensandbox.py  opensandbox_opt.py  sandbox_agent.py
tests/: debug_sandbox.sh  test_sandbox.py
tests/unit_tests/: test_agent.py
