[project]
name = "deep-agent"
version = "0.0.1"
description = "Deep Agent - 边抄边学 LangGraph + DeepAgents"
requires-python = ">=3.10"
dependencies = [
    "deepagents",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
    "langchain-openai",
    "langchain-community",
    "zai-sdk",
    "langgraph-checkpoint-redis",
    "langchain-mcp-adapters",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]
[tool.setuptools.package-dir]
"agent" = "src/agent"
